fix height on mobile

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ button:active {
 }
 
 .calculator {
-  height: 60vh;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -85,6 +85,11 @@ button:active {
   border-radius: 15px;
 }
 
+@media screen and (min-width: 425px) {
+  .calculator {
+    height: 50vh;
+  }
+}
 .row {
   flex: 1 0 auto;
 }
